# vtherm_smartpi

./: .gitignore  .gitignore.bak  CHANGELOG.md  LICENSE.md  README  README.fr.md  README.md  hacs.json  pyproject.toml  requirements_dev.txt  smart_pi_licensing.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
cards/: smartpi_diags-en.md  smartpi_diags-fr.md
tests/: __init__.py  conftest.py  helpers.py  test_algo_deadband_hysteresis.py  (+53 more)
tests-backup/: test_smart_pi_config.py  test_smartpi_ab_aggregator.py  test_smartpi_ab_drift.py  test_smartpi_algorithm.py  test_smartpi_antiwindup.py  test_smartpi_bumpless_transfer.py  test_smartpi_calibration.py  test_smartpi_cycle_alignment.py  test_smartpi_deadtime_estimator.py  test_smartpi_feedback.py  test_smartpi_feedforward.py  test_smartpi_ff3_eligibility.py  test_smartpi_first_start.py  test_smartpi_governance.py  test_smartpi_guards.py  test_smartpi_heartbeat_learning.py  test_smartpi_hysteresis_deadtime_window.py  test_smartpi_hysteresis_force.py  test_smartpi_hysteresis_learning.py  test_smartpi_integral_guard.py  test_smartpi_integral_hold.py  test_smartpi_learning_window_cv.py  test_smartpi_learning_window_near_band.py  test_smartpi_learning_window_sliding.py  test_smartpi_math.py  test_smartpi_multi_switch_bug.py  test_smartpi_nearband_model.py  test_smartpi_off_learning.py  test_smartpi_pause.py  test_smartpi_periodic_recalc.py  test_smartpi_robustness.py  test_smartpi_robustness_v2.py  test_smartpi_setpoint.py  test_smartpi_setpoint_change.py  test_smartpi_shedding.py  test_smartpi_window_bug.py
(+60 files in other folders)
